# MyTool

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/mytool/: ExampleInstrumentedTest.kt  MigrationTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: MyAES.cpp  MyAES.h  native-lib.cpp
app/src/main/java/com/example/mytool/: MainActivity.kt
app/src/main/java/com/example/mytool/ndk/: Jni.kt
app/src/main/java/com/example/mytool/netty/: ByteConvert.kt  MUDPService.kt  UDPServerTest.kt  UdpEntity.kt
app/src/main/java/com/example/mytool/retrofit/: ApiService.kt  LoggingInterceptor.kt  LoginEntity.kt  MHostnameVerifier.kt  NetworkScheduler.kt  RequestCallback.kt  ResponseWrapper.kt  RetrofitClient.kt  TrustAllHostnameVerifier.kt
app/src/main/java/com/example/mytool/room/: BookTable.kt  ComplexDataTable.kt  RoomClient.kt  RoomDao.kt  TypeConverter.kt
app/src/main/java/com/example/mytool/view/: IpEditText.kt
app/src/main/java/com/example/mytool/vpn/: CommonMethods.java  IPHeader.java  MVPNService.kt
app/src/main/res/layout/: layout_ip_edittext.xml
app/src/main/res/values/: dimens.xml
app/src/test/java/com/example/mytool/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
